--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.9
     - setuptools >=61.0.0
     - versioneer
     - pip
   run:
-    - python >=3.7
-    - intake
+    - python >=3.9
+    - intake <2.0.0
     - pandas
 
 test:
